--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-NODE_ENV = development;
-DB_USER = postgres;
-DB_HOST = localhost;
-DB_DATABASE = finalproject1;
-DB_PASSWORD = 1911andre;
+DB_USERNAME = postgres
+DB_HOST = localhost
+DB_DATABASE = finalproject1
+DB_PASSWORD = 1911andre
+DB_PORT=3333
